@@ -7,6 +7,7 @@ Authors@R: c(person("Stephane", "Champely", role=c("aut")),
   person("Peter", "Dalgaard", role="ctb"),
   person("Jeffrey", "Gill", role="ctb"),
   person("Stephan", "Weibelzahl", role="ctb"),
+  person("Aditya", "Anandkumar", role="ctb"),
   person("Clay", "Ford", role="ctb"),
   person("Robert", "Volcic", role="ctb"),
   person("Helios", "De Rosario", role="cre",
