@@ -28,7 +28,7 @@ function (u = NULL, v = NULL, f2 = NULL, sig.level = 0.05, power = NULL)
             1e-10, 100))$root
     else if (is.null(v)) 
         v <- uniroot(function(v) eval(p.body) - power, c(1 + 
-            1e-10, 1e+05))$root
+            1e-10, 1e+09))$root
     else if (is.null(f2)) 
         f2 <- uniroot(function(f2) eval(p.body) - power, c(1e-07, 
             1e+07))$root
