@@ -47,7 +47,7 @@ ttside<-switch(alternative, less = 1, two.sided = 2, greater=3)
         power <- eval(p.body)
     else if (is.null(n)) 
         n <- uniroot(function(n) eval(p.body) - power, c(2 + 
-            1e-10, 1e+07))$root
+            1e-10, 1e+09))$root
     else if (is.null(d)) {
  	if(ttside==2){       d <- uniroot(function(d) eval(p.body) - power, c(1e-07, 
             10))$root}
